# EqualsAssessment

./: README.rst  cleanup.sh  equals-assessment.cabal
src/: EqCommon.hs  EqLessons.hs  EqSQL.hs  Main.hs  WebUI.hs
