name:                equals-assessment
version:             2.1.0.0
synopsis:            A fast, simple pure-Haskell implementation of Equals Assessment
homepage:            http://equals-assessment.ablenetinc.com
license:             GPL-3
license-file:        LICENSE
author:              Sam Stuewe (HalosGhost)
maintainer:          sstuewe@ablenetinc.com
build-type:          Simple
extra-source-files:  README.rst
cabal-version:       >= 1.10

executable eqassess
  ghc-options:       -Wall -O2
  main-is:           Main.hs
  other-extensions:  OverloadedStrings
  build-depends:     base           >= 4.8    && <4.9,
                     containers     >= 0.5    && <0.6,
                     text           >= 1.2    && <1.3,
                     scotty         >= 0.10   && <0.11,
                     transformers   >= 0.4    && <0.5,
                     sqlite         >= 0.5    && <0.6,
                     wai-extra      >= 3.0    && <3.1,
                     wai-middleware-static >= 0.8.0   && < 0.9,
                     lucid          >= 2.9    && <2.10,
                     pandoc         >= 1.15   && <1.16,
                     bytestring     >= 0.10.6 && <0.11,
                     utf8-string    >= 1.0    && <1.1,
                     system-command >= 0.0.10 && <0.1,
                     old-time       >= 1.1    && <1.2,
                     xlsx           >= 0.1.1  && <0.2,
                     lens           >= 4.13   && <4.14

  hs-source-dirs:    src
  default-language:  Haskell2010
